very many changes

--- a/templates/highlander.html
+++ b/templates/highlander.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}| Commissions{% endblock %}
+{% block title %}| Collaborations{% endblock %}
 
 {% block content %}
     <div class="bio-container">
