--- a/templates/olympics.html
+++ b/templates/olympics.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %}| Personal{% endblock %}
+{% block title %}| Commissions{% endblock %}
 
 {% block content %}
     <script>
