--- a/templates/personal.html
+++ b/templates/personal.html
@@ -1,10 +1,10 @@
 {% extends "layout.html" %}
 
-{% block title %}| Commissions{% endblock %}
+{% block title %}| Personal{% endblock %}
 
 {% block content %}
 
-    <h1 style="text-align: center; margin: 0px; font-family: 'BHN Cinema'; color: white">Personal Work</h1>
+    <h1 style="text-align: center; margin: 40px; font-family: 'BHN Cinema'; color: white">Personal Work</h1>
     <div class="thumbnail-container">
         <div class="thumbnail">
             <div class="thumbnail-content">
@@ -53,7 +53,17 @@
                 </div>
             </div>
         </div>
-
+        <div class="thumbnail">
+            <div class="thumbnail-content">
+                <a class="thumbnail-header" href="portal">Coding and Interactivity</a>
+                <div class="thumbnail-description">
+                    Self-expression through the art of coding
+                </div>
+                <div class="thumbnail-description" style="color:#bbb;">
+                    Ongoing
+                </div>
+            </div>
+        </div>
     </div>
 
 {% endblock %}
