--- a/templates/superface.html
+++ b/templates/superface.html
@@ -43,54 +43,52 @@
             });
         });
     </script>
-
     <div class="masonry">
-
-        <div class="item">
-            <a href="../static/asset/images/self/1A.jpg" class="lightbox">
-                <img src="../static/asset/images/self/1A.jpg" alt="Image 1">
-            </a>
-        </div>
-        <div class="item">
-            <a href="../static/asset/images/self/1B.jpg" class="lightbox">
-                <img src="../static/asset/images/self/1B.jpg" alt="Image 2">
-            </a>
-        </div>
-        <div class="item">
-            <a href="../static/asset/images/self/1C.jpg" class="lightbox">
-                <img src="../static/asset/images/self/1C.jpg" alt="Image 1">
-            </a>
-        </div>
-        <div class="item">
-            <a href="../static/asset/images/self/2A.jpg" class="lightbox">
-                <img src="../static/asset/images/self/2A.jpg" alt="Image 1">
-            </a>
-        </div>
-        <div class="item">
-            <a href="../static/asset/images/self/2B.jpg" class="lightbox">
-                <img src="../static/asset/images/self/2B.jpg" alt="Image 2">
-            </a>
-        </div>
-        <div class="item">
-            <a href="../static/asset/images/self/2C.jpg" class="lightbox">
-                <img src="../static/asset/images/self/2C.jpg" alt="Image 1">
-            </a>
-        </div>
-        <div class="item">
-            <a href="../static/asset/images/self/3A.jpg" class="lightbox">
-                <img src="../static/asset/images/self/3A.jpg" alt="Image 1">
-            </a>
-        </div>
-        <div class="item">
-            <a href="../static/asset/images/self/3B.jpg" class="lightbox">
-                <img src="../static/asset/images/self/3B.jpg" alt="Image 2">
-            </a>
-        </div>
-        <div class="item">
-            <a href="../static/asset/images/self/3C.jpg" class="lightbox">
-                <img src="../static/asset/images/self/3C.jpg" alt="Image 1">
-            </a>
-        </div>
+    <div class="item">
+        <a href="../static/asset/images/self/1A.jpg" class="lightbox">
+            <img src="../static/asset/images/self/1A.jpg" alt="1A">
+        </a>
+    </div>
+    <div class="item">
+        <a href="../static/asset/images/self/1B.jpg" class="lightbox">
+            <img src="../static/asset/images/self/1B.jpg" alt="1B">
+        </a>
+    </div>
+    <div class="item">
+        <a href="../static/asset/images/self/1C.jpg" class="lightbox">
+            <img src="../static/asset/images/self/1C.jpg" alt="1C">
+        </a>
+    </div>
+    <div class="item">
+        <a href="../static/asset/images/self/2A.jpg" class="lightbox">
+            <img src="../static/asset/images/self/2A.jpg" alt="2A">
+        </a>
+    </div>
+    <div class="item">
+        <a href="../static/asset/images/self/2B.jpg" class="lightbox">
+            <img src="../static/asset/images/self/2B.jpg" alt="2B">
+        </a>
+    </div>
+    <div class="item">
+        <a href="../static/asset/images/self/2C.jpg" class="lightbox">
+            <img src="../static/asset/images/self/2C.jpg" alt="2C">
+        </a>
+    </div>
+    <div class="item">
+        <a href="../static/asset/images/self/3A.jpg" class="lightbox">
+            <img src="../static/asset/images/self/3A.jpg" alt="3A">
+        </a>
+    </div>
+    <div class="item">
+        <a href="../static/asset/images/self/3B.jpg" class="lightbox">
+            <img src="../static/asset/images/self/3B.jpg" alt="3B">
+        </a>
+    </div>
+    <div class="item">
+        <a href="../static/asset/images/self/3C.jpg" class="lightbox">
+            <img src="../static/asset/images/self/3C.jpg" alt="3C">
+        </a>
+    </div>
 
 
 
