--- a/templates/personal.html
+++ b/templates/personal.html
@@ -55,7 +55,7 @@
         </div>
         <div class="thumbnail">
             <div class="thumbnail-content">
-                <a class="thumbnail-header" href="portal">Coding and Interactivity</a>
+                <a class="thumbnail-header" href="afvs">Coding and Interactivity</a>
                 <div class="thumbnail-description">
                     Self-expression through the art of coding
                 </div>
