changed to p5js

--- a/templates/afvs.html
+++ b/templates/afvs.html
@@ -3,8 +3,8 @@
 {% block title %}| Personal{% endblock %}
 
 {% block content %}
-<script src="https://cdnjs.cloudflare.com/ajax/libs/processing.js/1.6.0/processing.min.js"></script>
-<script type="application/processing">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.6.0/p5.js"></script>
+<script>
     let gumball_dispenser ; let dispenser_lid_open ; let dispenser_lid_close ; let lid_open ; let dispenser_knob ; let knob_rotate = 0 ; // For the candy
     let candy ; let posX_candy = 320 ; let posY_candy ; let size_candy ; // For answer1[0]
     let Bored [ ] = new Array(10); // For answer1[2]
