--- a/templates/afvs.html
+++ b/templates/afvs.html
@@ -18,7 +18,7 @@
     let textArray = ["Cute", "What\nthey\ndoing?", "Ew", "That's\nnot it...", "YES", "HELP"];
 
     function preload() {
-        f = loadFont("../static/fonts/Junicode.ttf"); // Adjust the path to your font file
+        f = loadFont("../static/asset/fonts/BHN_CINEMA.ttf"); // Adjust the path to your font file
     }
 
     function setup() {
