--- a/templates/afvs.html
+++ b/templates/afvs.html
@@ -33,7 +33,7 @@
         }
 
         // Add the slogan
-        textAlign(CENTER, CENTER);
+        textAlign(LEFT, CENTER);
         fill(0);
         textSize(50);
         text("MIND\nOTHERS'\nBUSINESS", 70, 400);
