--- a/static/styles.css
+++ b/static/styles.css
@@ -125,6 +125,17 @@ body {
     opacity: 0.8;
 }
 
+#background-video {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    z-index: -1;
+ } 
 
 .bio-container {
     background-repeat: no-repeat;
