--- a/templates/afvs.html
+++ b/templates/afvs.html
@@ -88,4 +88,6 @@
         counter = int(random(0, textArray.length));
     }
 </script>
+
+<div class="spacer" style="padding-bottom: 10rem;"> </div>
 {% endblock %}
